clusters/proxmox-home/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: linkding
  name: linkding-ingress
  labels:
    app.kubernetes.io/name: linkding-ingress
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - linkding.mgsds.com
    secretName: linkding.mgsds.com-tls
  rules:
  - host: linkding.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkding
            port:
              number: 9090
